# osgRubiks

./: CMakeLists.txt  README.md  cube.cpp  cube.h  main.cpp  mainwindow.cpp  mainwindow.ui  rubikscube.cpp  rubikscube.h  rubikshandler.cpp  rubikshandler.cpp.autosave  rubikshandler.h  viewerwidget.cpp  viewerwidget.h
